--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 .logo{
-    width: 100%;
+    width: 90%;
     height: 8em;
     position: relative;
     left: 8%;
@@ -67,11 +67,13 @@ table, th, td{
     padding-left: 1%;
 }
 
+
 .datum{
     padding-right: 2%;
+    font-weight: bolder;
 }
 .numberIn{
-    width: 10%;
+    width: 20%;
     text-align: center;
     vertical-align: middle;
 
@@ -80,6 +82,7 @@ table, th, td{
 .textIn{
     text-align: center;
     padding: .3em;
+    font-weight: bold;
 
 }
 
@@ -90,27 +93,36 @@ table, th, td{
 
 }
 
+
+.twoInputs{
+    display: flex;
+    justify-content: space-between;
+}
 table{
     width: 100%;
     height: auto;
-    margin-top: 0em;
     border: 2px solid black;
 }
 
+#table1{
+    width:100%;
+}
 th{
     height: 2.5em;
     vertical-align: middle;
     background-color: #c5d9f1;
-    font-weight: bold;
-}
 
+}
+.operacija{
+    font-weight: bolder;
+}
 .horiz{
     vertical-align: text-bottom;
 }
 
 .gore{
     width: 100%;
-    height: 50%;
+    height: 40%;
     border-bottom: 1px solid black;
 }
 td input{
@@ -124,11 +136,14 @@ td{
 }
 input{
     width: 100%;
-    height: 100%;
+    height: 80%;
 }
 .noBorder{
     border: none;
+    width: 150%;
+    font-weight: bold;
 }
+
 
 input[type="time"]::-webkit-calendar-picker-indicator {
     background: none;
