--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,84 @@
-*{
+* {
     box-sizing: border-box;
 }
 
-.logo{
+.logo {
     width: 90%;
     height: 8em;
     position: relative;
     left: 8%;
 }
-main{
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+main {
+    width: 90%;
+    margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.info{
+
+.info {
     margin: 1em;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.info *{
+
+.info * {
     margin: .2em;
 }
-.description{
+
+.description {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.timeKol{
+.timeKol {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
 }
-.timeInfo{
+
+.timeInfo {
     width: 35%;
     display: flex;
     flex-direction: column;
 }
 
-.setTime{
+.setTime {
     width: 70%;
 }
 
-.setKol{
+.setKol {
     width: 70%;
     height: 2em;
 }
-.timeInput{
+
+.timeInput {
     display: flex;
 }
 
-textarea{
-    border:1px solid blue;
+textarea {
+    border: 1px solid blue;
     border-radius: 10px;
 }
 
-button{
+button {
     border-radius: 10px;
     border: 1px solid #0077CC;
     color: white;
     background-image: linear-gradient(#42A1EC, #0070C9);
 }
 
-.divButtons{
+.divButtons {
     width: 10em;
     height: 3em;
     display: flex;
@@ -72,37 +86,103 @@ button{
     margin-bottom: 1em;
 }
 
-#button1{
+#button1 {
     color: black;
     border: 1px solid rgb(204, 204, 25);
-    background-image: linear-gradient(yellow,rgb(210, 210, 42));
+    background-image: linear-gradient(yellow, rgb(210, 210, 42));
     font-weight: bold;
 }
 
-#button2{
+#button2 {
     border: 1px solid rgb(215, 44, 44);
-    background-image: linear-gradient(red,rgb(201, 48, 48));
+    background-image: linear-gradient(red, rgb(201, 48, 48));
     font-weight: bold;
 }
 
-select{
+select {
     border-radius: 4px;
 }
 
-.snimi{
-    margin:1em;
+.snimi {
+    margin: 1em;
     width: 50%;
-    background-image: linear-gradient(rgb(48, 200, 48),green);
+    background-image: linear-gradient(rgb(48, 200, 48), green);
+}
+
+.smjenskiIzvjestaj{
+    margin: 1em;
+    font-weight: bold;
 }
 /* ----------tabela */
-table, th, td{
+table,
+th,
+td {
     border: 1px solid black;
 }
 
-.smjenski{
+/* prva tabela */
+
+.radiliste {
+    height: 100%;
+    width: 5%;
+  
+}
+
+
+.gtn1 {
+    height: 50%;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    font-weight: bold;
+
+}
+
+.utrosak {
+    height: 100%;
+    border-bottom: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.stacFlex {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.stacDiv {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    overflow: hidden;
+}
+
+.gtn1Div {
+    border-bottom: 1px solid black;
+}
+
+.bold{
+    font-weight: bold;
+    overflow: hidden;
+}
+.rightBorder {
+    border-right: 1px solid black;
+}
+
+.smjenski {
     width: 100%;
     height: 3em;
-    border: 2px solid black;
     background-color: #f2f2f2;
     display: flex;
     justify-content: space-between;
@@ -111,141 +191,181 @@ table, th, td{
     font-size: 95%;
 }
 
-.kojaSmjena{
+.kojaSmjena {
     padding-left: 1%;
 }
 
 
-.datum{
+.datum {
     padding-right: 2%;
     font-weight: bolder;
 }
-.numberIn{
-    width: 20%;
+
+.numberIn {
+    width: 10%;
     text-align: center;
     vertical-align: middle;
 
 }
-
-.textIn{
+.line{
+    height: 100%;
+    border: none;
+    border-right: 1px solid black;
+}
+.textIn {
     text-align: center;
     padding: .3em;
-    font-weight: bold;
-
 }
 
-.timeIn{
-    width:10%;
+
+.timeIn {
+    width: 10%;
     text-align: center;
     vertical-align: middle;
 
 }
 
 
-.twoInputs{
+.twoInputs {
     display: flex;
     justify-content: space-between;
 }
-table{
+
+table {
     width: 100%;
     height: auto;
     border: 2px solid black;
 }
 
-#table1{
-    width:100%;
+#table1 {
+    width: 100%;
 }
-th{
-    height: 2.5em;
-    vertical-align: middle;
-    background-color: #c5d9f1;
 
+.vrijemeNas {
+    width: 5%;
 }
-.operacija{
-    font-weight: bolder;
+
+.borderRight{
+    border-right: 1px solid black;
 }
-.horiz{
+
+.horiz {
     vertical-align: text-bottom;
 }
 
-.gore{
+.noBorderTop {
+    height: 2.5em;
+    width: 10%;
+    vertical-align: top;
+    border-top: none;
+}
+
+.wordBreak{
+    word-break: break-all;
+}
+.noBorderBotton{
+    border-bottom: none;
+    vertical-align: bottom;
+    width: 10%;
+}
+.gore {
     width: 100%;
     height: 45%;
     border-bottom: 1px solid black;
 }
-td input{
+
+td input {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
 }
-td{
+
+td {
     height: auto;
 }
-input{
+
+input {
     width: 100%;
     height: 80%;
 }
-.noBorder{
+
+.noBorder {
     border: none;
-    width: 150%;
-    font-weight: bold;
 }
 
+th {
+    height: 2em;
+    vertical-align: middle;
+    background-color: #c5d9f1;
+
+}
+
+.wid{
+    width: 10%;
+}
+
+.bigger {
+    height: 4em;
+}
 
 input[type="time"]::-webkit-calendar-picker-indicator {
     background: none;
     display: none;
 }
 
+.smaller{
+    height: 1.5em;
+}
 /*  last table */
-.eksplozivna{
+.eksplozivna {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #ddd9c4;
+    border: 2px solid black;
 }
 
-.betweenTable{
-    width:100%;
+.betweenTable {
+    width: 100%;
     height: 2em;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.sameWidth th{
+.sameWidth th {
     width: 10em;
 }
 
-.yellow{
+.yellow {
     background-color: yellow;
     font-weight: bolder;
     text-align: center;
 }
 
-.red{
+.red {
     background: red;
     font: bolder;
     text-align: center;
     color: white;
 }
 
-.slump{
-    width: 33,2%;
+.slump {
+    width: 33, 2%;
 }
 
-.centarDiv{
+.centarDiv {
     width: 100%;
     height: 3em;
     border: 2px solid black;
-    background-color:#ddd9c4;
+    background-color: #ddd9c4;
     display: flex;
     text-align: center;
     font-weight: bold;
 }
 
-.slump{
+.slump {
     flex: 2.1;
     height: 100%;
     border-right: 1px solid black;
@@ -255,54 +375,62 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 
 }
 
-.same{
+.same {
     flex: 1;
     border-right: 1px solid black;
 }
 
-.sameWhite{
+.sameWhite {
     background: #f2f2f2;
 }
 
-.mbDiv{
+.mbDiv {
     display: flex;
     flex-direction: row;
     height: 100%;
     align-items: center;
 }
-.mb{
+
+.mb {
     border-right: 1px solid black;
     height: 100%;
     width: 50%;
     text-align: center;
-    vertical-align:text-bottom;
+    vertical-align: text-bottom;
 }
 
-.legenda{
+.legenda {
     position: relative;
     right: 30%;
     margin: 1em;
-    
+
 }
 
 /* napomene */
-#dodajNapomenu{
+#dodajNapomenu {
     margin: 1em;
 }
 
-.hidden{
-    display:none;
+.hidden {
+    display: none;
 }
 
 @media screen and (min-width: 600px) {
-  table, .operacija, .smjenski, #table1, .centarDiv{
-    width:80%;
-  }
+
+    table,
+    .operacija,
+    .smjenski,
+    #table1,
+    .centarDiv {
+        width: 80%;
+    }
 }
 
 @media print {
-    header{
-        position:fixed;
-        top:0;
+    header {
+        position: fixed;
+        top: 0;
     }
 }
+
+
