--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,7 @@ td {
     overflow: hidden;
 }
 
+
 .gtn1Div {
     border-bottom: 1px solid black;
 }
@@ -352,7 +353,20 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 }
 
 .slump {
-    width: 33, 2%;
+    width:100%;
+    height: 2em;
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #ddd9c4;
+    border-right: 3px solid black;
+    border-left: 3px solid black;
+    border-bottom: none;
+}
+
+.slumpDiv{
+    background:#ddd9c4 ;
 }
 
 .centarDiv {
@@ -363,16 +377,6 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     display: flex;
     text-align: center;
     font-weight: bold;
-}
-
-.slump {
-    flex: 2.1;
-    height: 100%;
-    border-right: 1px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
 }
 
 .same {
@@ -417,7 +421,8 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     .operacija,
     .smjenski,
     #table1,
-    .centarDiv {
+    .centarDiv,
+    .slump {
         width: 80%;
     }
 }
