adding images to app

--- a/css/style.css
+++ b/css/style.css
@@ -395,6 +395,33 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     align-items: center;
 }
 
+.potpis{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.potpisSve{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.linija{
+    width: 10em;
+    height: 2em;
+    border: 1px solid black;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+}
+
+.ing{
+    display: flex;    
+}
+
 .mb {
     border-right: 1px solid black;
     height: 100%;
@@ -410,7 +437,24 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 
 }
 
+.images{
+    width: 70%;
+    height: 50%;
+    border-radius: 20px;
+    border: 3px solid #42A1EC;
 
+}
+
+.listaSlika{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
+
+.note{
+    margin-top: .8em;
+}
 .hidden {
     display: none;
 }
@@ -424,7 +468,8 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     .centarDiv,
     .slump,
     .betweenTable
-    header {
+    header,
+    .potpis {
         width: 80%;
     }
 
@@ -447,6 +492,11 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     }
     .listaNapomena{
         page-break-before: always;
+    }
+
+    .images{
+        display: block;
+        page-break-after:always;
     }
       
 }
