--- a/css/style.css
+++ b/css/style.css
@@ -449,11 +449,22 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
 }
 
 .note{
     margin-top: .8em;
+}
+
+#clear{
+    background-image: linear-gradient(red,rgb(186, 35, 35));
+}
+
+.clearDisplay{
+    margin: 1em;
+    width: 100%;
+    height: 2em;
+    display: flex;
+    justify-content: space-evenly;
 }
 .hidden {
     display: none;
