--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@
 }
 
 .logo {
-    width: 70%;
-    height: 5em;
+    width: 100%;
+    height: 8em;
     position: relative;
-    left: 8%;
+    margin-top: .2em;
 }
 
 body {
@@ -525,6 +525,11 @@ input[type="time"]::-webkit-calendar-picker-indicator {
         display:block;
 
     }
+    .logo{
+        height:8em;
+        width: 100%;
+        margin-top: .2em;
+    }
 }
 
 
@@ -536,6 +541,15 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     }
     .aktivPrint{
         display:block
+    }
+    
+}
+
+@media (min-width:1300px) {
+    .logo{
+        height:12em;
+        width: 100%;
+        margin-top: .2em;
     }
 }
 
